--- a/src/content/snippets/Channel Messaging API/receiver.html
+++ b/src/content/snippets/Channel Messaging API/receiver.html
@@ -1,3 +1,3 @@
 <h3>Channel Messaging API receiver</h3>
-<h4>Received messages</h4>
-<ul id='receiverList'></ul>
+<h4>Received messages:</h4>
+<ol id='receiverList'></ol>
