Use textboxes instead

--- a/src/content/snippets/Device orientation events/sample.html
+++ b/src/content/snippets/Device orientation events/sample.html
@@ -1,1 +1,18 @@
 <button id="request">Request permission</button>
+
+<div id="container">
+  <label>Interval: <input id="intervalInMs" /></label>
+  <label>Acceleration (x): <input id="accelerationX" /></label>
+  <label>Acceleration (y): <input id="accelerationY" /></label>
+  <label>Acceleration (z): <input id="accelerationZ" /></label>
+  <label>Acceleration w/ gravity (x): <input id="accelerationIncludingGravityX" /></label>
+  <label>Acceleration w/ gravity (y): <input id="accelerationIncludingGravityY" /></label>
+  <label>Acceleration w/ gravity (z): <input id="accelerationIncludingGravityZ" /></label>
+  <label>Rotation rate (alpha): <input id="rotationAlpha" /></label>
+  <label>Rotation rate (beta): <input id="rotationBeta" /></label>
+  <label>Rotation rate (gamma): <input id="rotationGamma" /></label>
+  <label>Orientation (alpha): <input id="orientationAlpha" /></label>
+  <label>Orientation (beta): <input id="orientationBeta" /></label>
+  <label>Orientation (gamma): <input id="orientationGamma" /></label>
+  <label>Absolute: <input id="isAbsolute" /></label>
+</div>
