--- a/src/content/snippets/Device orientation events/sample.html
+++ b/src/content/snippets/Device orientation events/sample.html
@@ -5,9 +5,9 @@
   <label>Acceleration (x): <input id="accelerationX" /></label>
   <label>Acceleration (y): <input id="accelerationY" /></label>
   <label>Acceleration (z): <input id="accelerationZ" /></label>
-  <label>Acceleration w/ gravity (x): <input id="accelerationIncludingGravityX" /></label>
-  <label>Acceleration w/ gravity (y): <input id="accelerationIncludingGravityY" /></label>
-  <label>Acceleration w/ gravity (z): <input id="accelerationIncludingGravityZ" /></label>
+  <label>Acceleration including gravity (x): <input id="accelerationIncludingGravityX" /></label>
+  <label>Acceleration including gravity (y): <input id="accelerationIncludingGravityY" /></label>
+  <label>Acceleration including gravity (z): <input id="accelerationIncludingGravityZ" /></label>
   <label>Rotation rate (alpha): <input id="rotationAlpha" /></label>
   <label>Rotation rate (beta): <input id="rotationBeta" /></label>
   <label>Rotation rate (gamma): <input id="rotationGamma" /></label>
